--- a/profile.html
+++ b/profile.html
@@ -14,6 +14,12 @@
             <p>Github has helped me create my first repository</p>
             <h2><b>Web development</b></h2>
             <p>Web development has enabled me create my first website</p>
+            <h2><b>My hobies</b></h2>
+            <ol>
+                <li>Swimming</li>
+                <li>Sleeping</li>
+                <li>Exploring new places</li>
+            </ol>
             <h2>Follow me</h2>
             <ul>
                 <li>Twitter</li>
