--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 <h4>Its so interesting</h4>
 <h5>Am learning more each day</h5>
 <h6>Am super excited of what is ahead</h6>
-<p>My favorite hobies are listed down here;</p>
+<p>I enjoy exploring new ideas and new places</p>
 <ol>
     <li>Eating</li>
     <li>Sleeping</li>
     <li>Jazzing</li>
     <li>Watching Movies</li>
 </ol>
-<p>My favorite friends are down here;</p>
+<p>I really have amazing and lovely friends</p>
 <li>Medius</li>
 <li>Timothy</li>
 <li>Cathy</li>
+<h3>Check me out on</h3>
+<a href="https://github.com/JazirahNasozi/codequeen14/tree/master">Github</a><br>
+<img src="gala.jpg" width="300px" height="300px">
+<img src="ziira.jpg" alt="My Friends" width="300px" height="300px">
+
 </body>
 </html>
