--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
         </head>
         <body>
             <h1><b>Hello, I'm Jazirah</b></h1>
-            <img src="jaz.jpg" width="100px" height="130px">
+            <img src="code.jpg"100px" height="130px">
             <p>I love Github, web development, and exploring new things</p>
             <a href="https://github.com/">Github</a>
             <h2><b>Github</b></h2>
